# publish-example

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
mypackage/: __init__.py  decorator.py  transform.py
mypackage/tests/: test_transform_pytest.py
