[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.0.1"
description = "Sample package for Python"
readme = "README.md"
maintainers = [
    { name = "Inga Ulusoy", email = "ssc@iwr.uni-heidelberg.de" },
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pytest",
    "numpy",
]

[project.urls]
homepage = "https://github.com/ssciwr-courses/publish-example"  # FIXME not shown by pip
documentation = "https://github.com/ssciwr-courses/publish-example"

